I decided to stop learning "Introduction to Lattice and Order" until it becomes necessary in the future

--- a/Introduction-to-Lattices-and-Order/Notes.tex
+++ b/Introduction-to-Lattices-and-Order/Notes.tex
@@ -845,6 +845,10 @@ The proposition is trying to say that $\phi$ is an order-isomorphism.
 
 \colorbox{red}{TODO(ywen):} Study the proof.
 
+\colorbox{red}{TODO(ywen):} On 2024-02-15, I decided to stop here. I started to learn the order theory in order to
+understand the differences between maximal/minimal and maximum/minimum, but obviously I have gone way further than
+originally planned. I will resume the learning of this textbook if needed.
+
 % =============================================================================
 %
 % References
